# gary-gibbons

./: .gitattributes  .gitignore  ALETHEIA.md  CLAUDE.md  diff_names.txt  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  vite.config.ts  vitest.config.ts
.claude/agents/: gg-content-reviewer.md  gg-verifier.md
app/: index.html
app/src/: App.tsx  index.css
assets/: WHERE-ART-GOES.md
content/: achievements.json  deductions.json  game.json  hints.json  notebook.json  schedules.json  timeline.json
content/barks/: archie_notes.json  board_tutorial.json  day34.json  day567.json  gary_inner.json  rhymes.json  rumors.json  sidestory_barks.json  vignettes.json  voxpop.json  wrong_pairs.json
content/cards/: beatrice_read_will.json  clara_fear.json  clara_key_missing.json  ded_borrowed_recently.json  ded_careful_hands.json  ded_emptied_before.json  ded_final.json  ded_insider.json  ded_lodger.json  ded_means.json  ded_motive.json  ded_opportunity.json  ded_photo_witness.json  ded_poppy_opened_not_emptied.json  ded_proof.json  ded_prudence_cleared.json  ev_garden.json  (+46 more)
docs/: design-questions.md  gary-gibbons-art-bible.md  gary-gibbons-design-doc.md  gary-gibbons-technical-spec.md  phase-log.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
tests-e2e/: smoke.spec.ts
tools/: _rc_drive.mjs  _rc_drive2.mjs  _zcheck.mjs  _zcheck2.mjs  autoplay.ts  gen-icon.ts  gen-placeholders.ts  validate-content.ts
(+163 files in other folders)
